updates to MIFOSX-888

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -4828,7 +4828,7 @@ An enumeration that indicates the type of transaction processing strategy to be 
 	<li>4 = RBI (India)</li>
 	<li>5 = Principal Interest Penalties Fees Order</li>
 	<li>6 = Interest Principal Penalties Fees Order</li>
-      	<li>7 = Early Payment Strategy</li>
+    <li>7 = Early Payment Strategy</li>
 </ul>
 
 </ul>
@@ -8081,7 +8081,7 @@ An enumeration that indicates the type of transaction processing strategy to be 
 	<li>4 = RBI (India)</li>
 	<li>5 = Principal Interest Penalties Fees Order</li>
 	<li>6 = Interest Principal Penalties Fees Order</li>
-        <li>7 = Early Payment Strategy</li>
+    <li>7 = Early Payment Strategy</li>
 </ul>
 	</td>
 </tr>
@@ -23016,7 +23016,7 @@ No Request Body:
 	<p><strong>Late payment</strong>: Any payment that pays off an installment that occurs after the due date of the installment. There is no penalization for late payment. The total cost of the loan does not automatically increase, no penalties are automatically applied to the loan.</p>
 
         <h4>Early Payment Strategy</h4>
-	<p>This strategy works similar to the Interest Principal Penalties Fees Order for on-time and late payments. If the installments are paid early we will  </p>
+	<p>This strategy works similar to the Interest Principal Penalties Fees Order for on-time and late payments, i.e</p>
 	<p>
 		<strong>Payment order</strong>:
 		<ol>
@@ -23026,7 +23026,8 @@ No Request Body:
 			<li>Overdue and due fees</li>
 		</ol>
 	</p>
-	<p><strong>Early payment</strong>: Any payment that pays off an installment that occurs before the due date of the installment. There is no incentive/advantage to making an early payment as theres no decrease in cost of the loan.</p>
+	<p><strong>Early payment</strong>: Any payment that pays off an installment that occurs before the due date of the installment. There is no incentive/advantage to making an early payment as theres no decrease in cost of the loan. However, early payments are allocated only towards principal payments of future installments. Interest and fees/penalties of future installments are not paid and may be waived
+	manually if required</p>
 
 	<p><strong>On time payment</strong>: Any payment that pays off an installment that occurs exactly on the due date of the installment.</p>
 
