MIFOSX-975 - added Arrears status

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -5737,7 +5737,8 @@ GET https://DomainName/mifosng-provider/api/v1/loans
           1
         ]
       },
-      "feeChargesAtDisbursementCharged": 0
+      "feeChargesAtDisbursementCharged": 0,
+      "inArrears":false
     }
   ]
 }
